...
                    .fullScreenCover(
                        isPresented:$isPresented_Login,
                        content:loginPageView.init)
                    .fullScreenCover(
                        isPresented: $isPresented_LandingPage,
                        content: LandingPageView.init)
                    .accessibilityIdentifier("UserIcon")
                        
            }
            
        }
        .padding(.horizontal,15)
        .padding(.vertical,3)
...
