...
                        .foregroundColor(.red)
                    
                    HStack {
                        Button("Register"){
                            isPresentedRegister.toggle()
                        }
                        .accessibilityIdentifier("Register_Login")
                        .foregroundColor(.white)
                        .frame(width:118, height: 45)
                        
                        .background(Color(UIColor(
                            
                            red: 81/255,
...
